# actix-web-app

./: .env  Cargo.toml  Dockerfile  README.markdown  README.md  trenako.markdown
backend/: .env  Cargo.toml  Dockerfile  README.markdown
backend/migrations/2020-08-25-181714_initial_migration/: down.sql  up.sql
backend/src/: main.rs
backend/src/api/: middleware.rs  mod.rs  tokens.rs
backend/src/api/handlers/: account_handlers.rs  brand_handlers.rs  mod.rs
backend/src/api/handlers/catalog/: brand_handlers.rs
backend/src/api/requests/: brand_requests.rs
backend/src/api/responses/: pagination.rs
backend/src/db/: mod.rs  models.rs  schema.rs
backend/src/domain/: brands.rs
backend/src/middlewares/: mod.rs
backend/src/models/: brands.rs  common.rs  mod.rs
backend/src/tokens/: mod.rs
backend/src/webapi/: account_handlers.rs  authentication.rs  brand_handlers.rs  brands_controller.rs  middleware.rs  mod.rs  pagination.rs
frontend/public/: index.html
src/: config.rs  main.rs
src/api/: middleware.rs  mod.rs  tokens.rs
src/api/handlers/: account_handlers.rs  mod.rs
src/api/handlers/catalog/: brand_handlers.rs  mod.rs
src/api/requests/: mod.rs
src/domain/: brands.rs
