[package]
name = "trenako_webapi"
version = "0.1.0"
authors = ["CarloMicieli <carlo.micieli@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-web-validator = "1.0.0"
actix-cors = "0.2.0"
actix-rt = "1.1"
actix-service = "1.0.6"
log = "0.4.11"
chrono = "0.4.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.115"
uuid = { version = "0.8", features = ["serde", "v4"] }
isocountry = "0.2.0"
url = "2.1.1"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15.0"
rust_decimal = { version = "1.7.0", features = ["db-postgres", "serde-float"] }
rust_decimal_macros = "1.7.0"
regex = "1"
slug = "0.1.4"
jsonwebtoken = "7.2.0"
bcrypt = "0.8.2"
futures = "0.3.5"
bigdecimal = "0.1.2"
validator = "0.10.1"
validator_derive = "0.10.1"
anyhow = "1.0.32"
thiserror = "1.0.20"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.6.0"
slog-envlogger = "2.2.0"
