[package]
name = "trenako_webapi"
version = "0.1.0"
authors = ["CarloMicieli <carlo.micieli@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-web-validator = "2.0.1"
actix-cors = "0.5.3"
actix-rt = "1.1"
actix-service = "1.0.6"
log = "0.4.11"
chrono = "0.4.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.115"
uuid = { version = "0.8", features = ["serde", "v4"] }
isocountry = "0.2.0"
url = "2.2.0"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
r2d2 = "0.8"
dotenv = "0.15.0"
rust_decimal = { version = "1.8.1", features = ["db-postgres", "serde-float"] }
rust_decimal_macros = "1.8.1"
regex = "1"
slug = "0.1.4"
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
futures = "0.3.5"
bigdecimal = "0.2.0"
validator = "0.12.0"
validator_derive = "0.12.0"
anyhow = "1.0.32"
thiserror = "1.0.20"
slog = "2.7.0"
slog-async = "2.5.0"
slog-term = "2.6.0"
slog-envlogger = "2.2.0"
