[package]
name = "trenako_webapi"
version = "0.1.0"
authors = ["CarloMicieli <carlo.micieli@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.1"
env_logger = "0.7.1"
chrono = "0.4.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
isocountry = "0.2.0"
url = "2.1.1"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15.0"
rust_decimal = { version = "1.7.0", features = ["db-postgres", "serde-float"] }
rust_decimal_macros = "1.7.0"
regex = "1"
slug = "0.1.4"
